<resources>
    <string name="app_name">2insta</string>
    <string name="username_email_phonenumber">Username , Email or PhoneNumber</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="biography">Biography</string>
    <string name="_50_n_posts">50  \n Posts</string>
    <string name="_999k_n_followers">999k  \n Followers</string>
    <string name="_900_n_following">900  \n Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="search">Search</string>
    <string name="people">People</string>
    <string name="tags">Tags</string>
    <string name="places">Places</string>
    <string name="following">Following</string>
    <string name="popular">Popular</string>
</resources>
