<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edt"
            android:textSize="20sp"
            android:ems="10"
            android:hint="@string/search"
            android:drawableRight="@drawable/search"
            android:drawableLeft="@drawable/people"
            android:drawablePadding="5dp"
            android:drawableTint="@color/black"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/search_people"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:theme="@style/btn"
            android:background="@drawable/btn_search_solid"
            android:layout_margin="5dp"
            android:text="@string/people"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/search_tags"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:theme="@style/btn"
            android:background="@drawable/btn_search"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:text="@string/tags" />

        <Button
            android:id="@+id/search_places"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:theme="@style/btn"
            android:background="@drawable/btn_search"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:text="@string/places" />


    </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>